Closed Bug 190799 Opened 22 years ago Closed 22 years ago

xpcom/io/nsFileSpec.cpp", line 905: Warning: String literal converted to char* in initialization.

Categories

(Core :: XPCOM, defect)

Sun
Solaris
defect
Not set
trivial

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

"/export/home/timeless/mozilla/xpcom/io/nsFileSpec.cpp", line 905: Warning:
String literal converted to char* in initialization.
1 Warning(s) detected.
Attached patch fixSplinter Review
Comment on attachment 112760 [details] [diff] [review]
fix

yes i know filespec must die.
Attachment #112760 - Flags: superreview?(roc+moz)
Attachment #112760 - Flags: review?(dougt)
Attachment #112760 - Flags: superreview?(roc+moz) → superreview+
Attachment #112760 - Flags: review?(dougt) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: