Bug 190799 xpcom/io/nsFileSpec.cpp", line 905: Warning: String literal converted to char* in initialization. r=dougt sr=roc+moz